fix white space

--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -39,11 +39,14 @@
 
 .c-project__content {
   display: inline;
+  p {
+    margin: 1em 0 0;
+  }
   p:first-child {
     display: inline;
   }
-  p {
-    margin: 1.5em 0 0;
+  p:last-child {
+    margin-bottom: -1em;
   }
 }
 
